until 42 druckreife edition

--- a/bindu.bib
+++ b/bindu.bib
@@ -2944,7 +2944,7 @@ keywords={primary},
 }%!
 
 @phdthesis{birch2013,
- title={The Amanaska: King of All Yogas. A Critical Edition and Annotated Translation with a Monographic Introduction},
+ title={The Amanaskaa: King of All Yogas. A Critical Edition and Annotated Translation with a Monographic Introduction},
  author={Birch, Jason},
  year={2013},
  school={University of Oxford},
@@ -2956,7 +2956,7 @@ keywords={primary},
 @misc{amanaskaed,
    title={Amanaska},
    subtitle={Amanaska: King of All Yogas. A Critical Edition and Annotated Translation with a Monographic Introduction}, 
-   howpublished={See Ph.D. Dissertation by Jason Birch (2013), pp. 215--182},
+   howpublished={See Ph.D. Dissertation by Jason Birch (2013)},
    keywords={primary},
 }%!
 
