--- a/bindu.tex
+++ b/bindu.tex
@@ -136,259 +136,217 @@ The third chapter contains a comparative analysis of the complex early modern yo
   ]
   \begin{edition}
     \ekddiv{
-      head={[\uproman{37}. \textbf{piṇḍamadhye saptasamudrāḥ}]},
-      type=section,
-      depth=2, 
-      n=XXXVII
-    }
-    \xmlhead[h37]{[XXXVII. piṇḍamadhye saptasamudrāḥ]}
-    \phantomsection
-      \addcontentsline{toc}{section}{XXXVII. piṇḍamadhye saptasamudrāḥ}
-    \phantomsection\label{saptasamudra}
-       \begin{prose}[p37_01]
-      \noindent
+  head={[\uproman{42}. \textbf{rājayogāc charīre cihnāni}]},
+  type=section,
+  depth=2, 
+  n=XLII 
+}
+\xmlhead[h42]{[XLII. rājayogāc charīre cihnāni]}
+\phantomsection
+ \addcontentsline{toc}{section}{XLII. rājayogāc charīre cihnāni}
+ \phantomsection\label{attributesrajabody}
+\begin{prose}[p42_01]
+  \noindent
 %----------------------------
-%idānīṃ piṃḍamadhye saptasamudrāḥ kathyante// prasvedamadhye kṣārasamudraḥ/   \E
-%idānīṃ piṃḍamadhye saptasamudrāḥ kathyaṃte   prasvedamadhye kṣārasamudraḥ    \P
-%idānīṃ piṃḍamadhye samudrāḥ      kathyate//  prasvedamadhye kṣārasamudraḥ//  \B
-%idānīṃ piṃḍamadhye samudrāḥ      kathyaṃte// prasvedamadhye sārasasamudraḥ// \L
-%\om                                                                          \N1
-%idānīṃ piṃḍamadhye saptasamudrāḥ kathyete//  prasvedamadhye kṣārasasamudra   \D
-%idānīṃ piṃḍamadhye saptasamudrāḥ kathyaṃte//  prasvedamadhye kṣārasasamudra   \K1
-%idānīṃ piṃḍamadhye saptasamudrāḥ kathyaṃte//  prasvedamadhye kṣārasasamudraḥ//   \J      
-%\om                                                                          \N2
-%idānīṃ piṃḍamadhye saptasamudrāḥ kathyaṃte      svedamadhye kṣārasasamudraḥ  \U1 %%%288.jpg
-%idānīṃ piṃḍamadhye saptasamudrāḥ kathyaṃte// prasvedamadhye kṣārasāgaraḥ//   \U2
+%idānīṃ rājayogāc charīre    yādṛśāni cihnāni bhavanti   tāni kathyante// \E
+%idānī  rogayogācharīre     etādṛśāni cihnāni bhavaṃti   tāni kathyaṃte   \P
+%idānī  rājayogāc charīre// etādṛśāni cihnāni bhavaṃti// tāni kathyaṃte// \B 7170.jpg end 7171.jpg beginning
+%idānīṃ rājayogāc charīre   etādṛśāni cihnāni bhavaṃti   tāni kathyaṃte// \L
+%\om                                                                     \N1
+%idānīṃ rājayogāc charīre   etādṛśāni cihnāni bhavaṃti// tāni kathyaṃte// \D
+%idānīṃ rājayogā // charīre   etādṛśāni cihnāni bhavaṃti// tāni kathyaṃte// \K1
+%idānīṃ rājayogāc charīre   etādṛśāni cihnāni bhavaṃti// tāni kathyaṃte// \J
+%\om                                                                     \N2
+%idānīṃ rājayogācharīre     etādṛśāni cihnāni bhavaṃti   tāni kathyaṃte   \U1
+%idānī  rājayogāśarīre      etādṛśāni cihnāni bhavaṃti// tāni kathyaṃte// \U2
 %-----------------------------
-%Now the seven oceans within the body are taught. (1) Within sweat is the salt ocean. 
-%----------------------------
-      \note[type=source, labelb=_106b, labele=_106e, nosep]{cf. YSv (PT, pp. 842-43): samudrāḥ sapta kathyante piṇḍamadhye vyavasthitāḥ | lavaṇekṣusurāsarpirdadhidugdhajalāntakāḥ | lavaṇaṃ svedamadhye tu ikṣūrakte madhu tvaci | sarpir medo vasāmadhye dadhi kṣīraṃ lalāṭake | vīryamadhye 'mṛto jñeyaḥ pāde kūrmaḥ sthito mahān |}
-      \note[type=source, labelb=_106b, labele=_106e, nosep]{cf. SSP 3.8 (Ed. p. 29): mūrte kṣārasamudraḥ | śukre 'mṛtasamudraḥ | lālāyāṃ kṣīrasamudraḥ | kaphe dadhisamudraḥ | medasi ghṛtasamudraḥ | vasāyāṃ madhusamudraḥ | rakte ikṣusamudraḥ | evaṃ saptasamudrāḥ ||}
-idānīṃ piṇḍamadhye\linelabel{_106b}
-\app{\lem[wit={ceteri}]{saptasamudrāḥ}
-  \rdg[wit={B,L}]{samudrāḥ}}\hfill
-\app{\lem[wit={ceteri}]{kathyante}
-  \rdg[wit={B}]{kathyate}
-  \rdg[wit={D}]{kathyete}}/\hfill
-\app{\lem[wit={ceteri}]{prasvedamadhye}
-  \rdg[wit={U1}]{svedamadhye}}\hfill
-\app{\lem[wit={ceteri}]{kṣārasamudraḥ}
-  \rdg[wit={L}]{sārasasamudraḥ}
-  \rdg[wit={U1}]{kṣārasasamudraḥ}
-  \rdg[wit={K1}]{kṣārasasamudra}
-  \rdg[wit={U2}]{kṣārasāgaraḥ}}\dd{}\hfill
-%----------------------------
-%lalāṭamadhye kṣīraḥ samudraḥ/            vāṅmadhye                                 madhusamudraḥ/  kaphamadhye  dadhisamudraḥ/  medomadhye ghṛtasamudraḥ/  \E
-%lālāmadhye   kṣīrasamudraḥ               vasāmadhye                                madhusamudraḥ   kaphamadhye  dadhisamudraḥ   medomadhye ghṛtasamudraḥ   \P
-%lalāṭamadhye kṣīrasamudraḥ// raktamadhye vasāmadhye                                madasamudraḥ    kaphamadhye  dadhisamudraḥ// medomadhye ghṛtasamudraḥ// \B
-%lalāṭamadhye kṣīrasamudraḥ// raktamadhye vasāmadhye                                madyasamudraḥ// kaphamadhye  dadhisamudraḥ// medamadhye ghṛtasamudraḥ// \L
+%Now, such attributes arise in the body from Rājayoga. These are taught [in the following]. 
+%-----------------------------
+\app{\lem[wit={ceteri}]{idānīṃ}
+  \rdg[wit={B,P,U2}]{idānī}}
+\app{\lem[wit={D,J,E,L}, alt={rājayogāc charīre}]{rājayogāc\skp{-}charīre}
+  \rdg[wit={K1}]{rājayogā || charīre}
+  \rdg[wit={B}]{rājayogāc charīre ||}
+  \rdg[wit={U1}]{rājayogācharīre}
+  \rdg[wit={U2}]{rājayogāśarīre}
+  \rdg[wit={P}]{rogayogācharīre}}
+\app{\lem[wit={ceteri}]{etādṛśāni}
+  \rdg[wit={E}]{yādṛśāni}}
+cihnāni bhavanti/ tāni kathyante/
+%-----------------------------
+%sakalaroganāśaḥ   sakalapṛthvīṃ   paśyati/  tad anaṃtaraṃ              jñānam utpadyate// \E [p.55]
+%sakalaroganāśaḥ   sakalāṃ pṛthvīṃ paśyati   tad aṃtaraṃ                jñānam utpadyate   \P
+%sakalaroganāśaḥ   sakalapṛthvīṃ   paśyatī/  tad anaṃtaraṃ              jñānam utpadyate// \B
+%sakalaroganāśaḥ   sakalapṛthvīṃ   paśyati/  tad anaṃtaraṃ              jñānam utpadyate// \L
+%\om                                                                                       \N1
+%sakalaroganāśaḥ   sakalapṛthvīṃ   paśyatī/  tad anaṃtaraṃ tatvaviṣayaṃ jñānam utpadyate/  \D %%%p. 15 verso
+%sakalaroganāśaḥ   sakalapṛthvīṃ   paśyatī//  tad anaṃtaraṃ tatvaviṣayaṃ jñānam utpadyate/  \K1
+%sakalarogaḥ//     sakalapṛthvīṃ   paśyati//  tad anaṃtaraṃ tatvaviṣayaṃ// jñānam utpadyate//  \J
+%\om                                                                                       \N2
+%sakalarogaḥ nāśaḥ sakalapṛthvīṃ   paśyati   tad anaṃtaraṃ tatvaviṣayaṃ jñānam utpadyate   \U1
+%sakalaroganāśaḥ   sakalapṛthvīṃ   paśyati// tad anaṃtara---------------jñānam utpadyate// \U2
+%-----------------------------
+%All diseases are destroyed. He sees the entire earth. Then (tad anaṃtaraṃ) knowledge in the realm of reality is generated.   
+%-----------------------------
+\note[type=source, labelb=_116b, labele=_116e, nosep]{cf. YSv (PT, p. 844): yasya darśanamātreṇa rogaśokavivarjitaḥ | paramānandacittaḥ syāt tapasvī caiva kīrttitaḥ | saptadvīpā bhaved dṛṣṭā tattvajñānaṃ tato bhavet | sarvabhāvaṃ vijānīyād vajradeho bhavet tathā | sarpadaṣṭe viṣaṃ na syāt kṣudhā nidrā tṛṣā tathā |}
+\app{\lem[wit={ceteri}]{sakalaroganāśaḥ}\linelabel{_116b}
+  \rdg[wit={U1}]{sakalarogaḥ nāśaḥ}
+  \rdg[wit={J}]{sakalarogaḥ ||}}/
+\app{\lem[wit={ceteri}, alt={sakalapṛthvīṃ}]{sakalapṛthvīṃ}
+  \rdg[wit={P}]{sakalāṃ pṛthvīṃ}}
+\app{\lem[wit={ceteri}]{paśyati}
+  \rdg[wit={B,D,K1,L}]{paśyatī}}/
+\app{\lem[wit={ceteri}]{tad\skp{-}anantaraṃ}
+  \rdg[wit={P}]{tad aṃtaraṃ}
+  \rdg[wit={U2}]{tad anaṃtara°}}
+\app{\lem[wit={D,J,K1,U1}]{tattvaviṣayaṃ}
+  \rdg[wit={ceteri}]{\om}}
+jñānam-utpadyate/
+%-----------------------------
+%samagrā  bhāṣā  jānāti/  tataḥ puruṣasya deho vajramayo bhavati/  sarpadaṃśena    maraṇaṃ na bhavati/   \E
+%samagrāṃ bhāṣāṃ jānāti   tataḥ puruṣasya deho vajramayo bhavati   sarpadaṃśo      maraṇaṃ na bhavati    \P
+%samagrā  bhāṣa  jānāti   tataḥ puruṣasya deho vajramayo bhavati// sarpadaṃśema    maraṇaṃ na bhavatī/   \B
+%samagra  bhāṣā    jānāti tataḥ puruṣasya deho vajramayo bhavati// sarpadaṃśe      maraṇaṃ    bhavati//  \L
+%\om                                                                                                     \N1
+%samagrāṃ bhāṣāṃ jānāti/  tataḥ puruṣasya deho vajramayo bhavati/  sarpadaṃśe satī maraṇaṃ na bhavati/   \D
+%samagrāṃ bhāṣāṃ jānāti//  tataḥ puruṣasya deho vajramayo bhavati//  sarpadaṃśe sati maraṇaṃ na bhavati//   \K1
+%samagrāṃ bhāṣāṃ jānāti//  tataḥ puruṣasya deho vajramayo bhavati//  sarpadaṃśe sati maraṇaṃ na bhavati//   \J
+%\om                                                                                                     \N2
+%samagrāṃ bhāṣāṃ jānāti   tataḥ puruṣasya deho vajramayo bhavati   sarpadaṃśe satī maraṇaṃ na bhavati    \U1
+%samagrā bhāṣā   jānāti// tataḥ puruṣasya deho vajramayo bhavati// sarpadaṃśe      maraṇaṃ na vati//     \U2
+%-----------------------------
+%He realizes the totality of language. Because of that [Rājayoga?] the body of the human becomes indestructable. Death through a snake-bite does not arise. 
+%-----------------------------
+\app{\lem[wit={ceteri}]{samagrāṃ bhāṣāṃ}
+  \rdg[wit={E,U2}]{samagrā bhāṣā}
+  \rdg[wit={B}]{samagrā bhāṣa}
+  \rdg[wit={L}]{samagra bhāṣā}}
+jānāti/
+tataḥ puruṣasya deho vajramayo bhavati/ 
+sarpa\app{\lem[wit={ceteri}, alt={°daṃśe}]{daṃśe}
+  \rdg[wit={P}]{°daṃśo}
+  \rdg[wit={E}]{°daṃśena}
+  \rdg[wit={B}]{°daṃśema}}
+\app{\lem[wit={J,K1}]{sati}
+  \rdg[wit={D,U1}]{satī}
+  \rdg[wit={ceteri}]{\om}}
+maraṇaṃ
+\app{\lem[wit={ceteri}]{na}
+  \rdg[wit={L}]{\om}}
+\app{\lem[wit={ceteri}]{bhavati}
+  \rdg[wit={B}]{bhavatī}
+  \rdg[wit={U2}]{vati}}/
+%-----------------------------
+%tataḥ puruṣasya bubhukṣā--pipāsā--nidrollatā------śītoṣṇatā bādhāṃ na kurvanti/ \E
+%tataḥ puruṣasya bunnukṣā--pipāsā--nidrolmatā------śītatā----bādhā na kurvaṃti \P
+%tatpuruṣasya    babhukṣā--pipāsā--nidrollatā------śīta------bādhā na kurvanti/ \B
+%tatpuruṣasya    babhukṣā--pipāsā--nidroṣṇatā------śīta------bādhā na kurvanti... \L
 %\om                                                                 \N1
-%lalāṭamadhye kṣīrasamudraḥ/              vasāmadhye                                                             dadhisamudraḥ// medamadhye ghṛtasamudraḥ// \D
-%lalāṭamadhye kṣīrasamudraḥ/              vasāmadhye                                                             dadhisamudraḥ// medamadhye ghṛtasamudraḥ// \K1
-%lalāṭamadhye kṣīrasamudraḥ//              vasāmadhye                                                             dadhisamudraḥ// medamadhye ghṛtasamudraḥ// \J
-%\om                                                                                                                                                         \N2
-%lalāṭamadhye kṣīrasamudraḥ               vasāmadhye                                                             dadhisamudraḥ   medamadhye ghṛtasamudraḥ   \U1 %%%288.jpg
-%lalāṭamadhye kṣīrasamudraḥ//             vīryamadhye svāduḥ samudraḥ// majjāmadhye madhusamūdraḥ// kaphamadhye  dadhisamudraḥ// medamadhye ghṛtasamudraḥ// \U2
+%tataḥ puruṣasya bubhukṣā--pipāsā--nidrā/ uṣṇatā// śīta nā   bādhāṃ na kuroti???/ \D
+%tataḥ puruṣasya bubhukṣā // pipāsānidrā// uṣṇatā// śīta nā   bādhāṃ na karoti// \K1
+%\om \J
+%\om                                                                 \N2
+% \om                                                         \U1
+%tataḥ puruṣasya bubhukṣā--pipāsā--nidroṣṭṇatā-----śīta------bādhāṃ na kurvaṃti// \U2
 %-----------------------------
-%(2) Within the forehead is the milk ocean. (3) Within the marrow is the honey-ocean. (4) In the phlegm is the sour milk ocean. (5) In the fat is the butter ocean.  
-%----------------------------
-\app{\lem[wit={ceteri}]{lalāṭamadhye}
-  \rdg[wit={P}]{lālāmadhye}}\\
-\app{\lem[wit={ceteri}, alt={kṣīrasamudraḥ}]{kṣīrasamudraḥ}
-  \rdg[wit={E}]{kṣīraḥ samudraḥ}}\dd{}
-\app{\lem[wit={ceteri},alt={vasāmadhye}]{vasāmadhye}
-  \rdg[wit={E}]{vāṅmadhye}
-  \rdg[wit={U2}]{vīryamadhye svāduḥ samudraḥ || majjāmadhye}}
-\app{\lem[wit={E,P}]{madhusamudraḥ}
-  \rdg[wit={B}]{madasamudraḥ}
-  \rdg[wit={L}]{madyasamudraḥ}
-  \rdg[wit={U2}]{madhusamūdraḥ}
-  \rdg[wit={D,J,K1,U1}]{\om}}\dd{}
-\app{\lem[wit={ceteri}]{kaphamadhye}
-  \rdg[wit={D,J,K1,U1}]{\om}} dadhisamudraḥ\dd{}
-\app{\lem[wit={B,E,P}, alt={medo°}]{medo}
- \rdg[wit={ceteri}]{meda°}}madhye ghṛtasamudraḥ\dd{}
-%----------------------------
-%                           rasamadhye   ikṣurasasamudraḥ// vīryamadhye svādusamudraḥ/                pādamadhye kūrmasthānam//   \E
-%                           raktamadhye  ikṣurasasamudraḥ   vīryamadhye svādudakasamudraḥ             pādamadhye kūrmasthānam     \P
-%                                        ikṣusamudraḥ/      vīryamadhye svādukasamudraḥ/  karmasthāna pādasamadhye/               \B
-%                                        ikṣusamudraḥ//     vīryamadhye svādukasamudraḥ// karmasthāna pādamadhye                  \L
-%\om                                                                                                                             \N1
-%vasāmadhye madhusamudraḥ// raktamadhye  ikṣusamudraḥ//     vīryamadhye amṛtasamudraḥ/                pādam tale  kūrmasthānaṃ/    \D
-%vasāmadhye madhusamudraḥ// raktamadhye  ikṣusamudraḥ//     vīryamadhye amṛtasamudraḥ//                pādam tale  kūrmasthānaṃ/  \K1
-%npāmadhye madhusamudraḥ// raktamadhye  ikṣusamudraḥ//     vīryamadhye mṛtasamudraḥ//cha//           pādamadhye  kūrmasthānaṃ/    \J
-%\om                                                                                                                             \N2
-%vasāmadhye madhusamudraḥ   raktamadhye  ikṣurasamudraḥ     vīryamadhye mṛtasamudraḥ                  pādamadhye kūrmasthānaṃ     \U1 %%%288.jpg
-%                           raktamadhye  ikṣurasamudraḥ//                                                                         \U2
+%Then the afflictions of hunger, thirst, sleepiness, and heat do not arise for the person. 
 %-----------------------------
-% (6) Within the blood is the sugar ocean. (7) Within the semen is the ocean of the nectar of immortality. Situated at [their] feet is the place of the turtle. 
-%----------------------------
-\app{\lem[wit={P,U1,U2}]{raktamadhye}
-  \rdg[wit={D,U1}]{vasāmadhye madhusamudraḥ || raktamadhye}
-  \rdg[wit={J}]{npāmadhye madhusamudraḥ || raktamadhye}
-  \rdg[wit={E}]{rasamadhye}}
-\app{\lem[wit={ceteri}]{ikṣusamudraḥ}
-  \rdg[wit={U1,U2}]{ikṣurasamudraḥ}
-  \rdg[wit={E,P}]{ikṣurasasamudraḥ}}\dd{}
-%\note[type=philcomm, labelb=278, lem={ikṣura°}]{Due to \textit{sandhi} \textit{akṣura°} would be exspected, but was probably misregarded for clarity.}
-vīryamadhye\app{\lem[wit={J,U1}]{'mṛtasamudraḥ}
-  \rdg[wit={D,K1}]{amṛtasamudraḥ}
-  \rdg[wit={E}]{svādusamudraḥ}
-  \rdg[wit={B,L}]{svādukasamudraḥ}
-  \rdg[wit={P}]{svādudakasamudraḥ}}\dd{}
-\app{\lem[wit={ceteri}]{pādamadhye}
-  \rdg[wit={B}]{karmasthāna pādasamadhye}
-  \rdg[wit={L}]{karmasthāna pādamadhye}
-  \rdg[wit={D,K1}]{pādam tale}}
-\app{\lem[wit={ceteri}]{kūrmasthānam}
-  \rdg[wit={D,J,K1,U1}]{kūrmastānaṃ}
-  \rdg[wit={B,L}]{\om}}\dd{}\linelabel{_106e}
-\end{prose}
+\app{\lem[wit={ceteri}]{tataḥ}
+  \rdg[wit={B,L}]{tat°}
+  \rdg[wit={J,U1}]{\om}}
+\app{\lem[wit={ceteri}]{puruṣasya}
+  \rdg[wit={J,U1}]{\om}}
+\app{\lem[wit={D,E,K1,U2}]{bubhukṣā}
+  \rdg[wit={P}]{bunnukṣā}
+  \rdg[wit={B,L}]{babhukṣā}
+  \rdg[wit={J,U1}]{\om}
+}\app{\lem[wit={L},alt={pipāsānidroṣṇatā°}]{pipāsānidroṣṇatā}
+  \rdg[wit={U2}]{pipāsānidroṣṭṇatā°}
+  \rdg[wit={D,K1}]{pipāsānidrā | uṣṇatā ||}
+  \rdg[wit={E,B}]{pipāsānidrollatā}
+  \rdg[wit={P}]{pipāsānidrolmatā}
+  \rdg[wit={J,U1}]{\om}
+}\app{\lem[wit={ceteri},alt={°śīta°}]{śīta}
+  \rdg[wit={P}]{śītatā}
+  \rdg[wit={E}]{śītoṣṇatā}
+  \rdg[wit={D,K1}]{śīta nā}
+  \rdg[wit={J,U1}]{\om}}bādhāṃ na
+\app{\lem[wit={ceteri}]{kurvanti}
+   \rdg[wit={K1}]{karoti}
+   \rdg[wit={D}]{kuroti}
+    \rdg[wit={J,U1}]{\om}}/\linelabel{_116e}
+%-----------------------------
+%vāksiddhir bhavati/  vidyatpāte           kācid bādhāpi na bhavati// \E
+%vāksiddhir bhavati                                        \P
+%vāksiddhir bhavatī/  vidyutpāte           kācid glānir na bhavati// \B
+%vāksiddhir bhavati/  vidyutpāte           kācid glānir na bhavati// \L
+%\om                                                                 \N1
+%vāksiddhir bhavati/  vidyutpāte śarīre    na kiṃcid glānir bhavati/ \D
+%\om                                                                 \N2
+%                     vidyutpāte śarīre    kvācid glānir na bhavati  \U1
+%vāksiddhir bhavati// vidyutpāte           kācidd hānir na bhavati// \U2
+%-----------------------------
+%Perfection of speech arises. Within the moment of a thunderstroke any kind of fatigue does not arise in the body.  
+%-----------------------------
+\note[type=source, labelb=_308, labele=_308e, nosep]{cf. YSv (PT, p. 844): uṣṇatā śītatā ceti vāksiddhiḥ syān na saṃśayaḥ | vidyutpāte 'pi dehasya kvacid hānir na jāyate |}
+vāksiddhir-bhavati/ vidyutpāte
+    \app{\lem[wit={D,U1}]{śarīre}\linelabel{_308}
+      \rdg[wit={ceteri}]{\om}}
+    \app{\lem[wit={U2}, alt={kācid hānir na}]{kācid hānir-na}
+      \rdg[wit={B,L}]{kācid glānir na}
+      \rdg[wit={D}]{na kiṃcid glānir}
+      \rdg[wit={U1}]{kvācid glānir na}
+      \rdg[wit={E}]{kācid bādhāpi}}
+    bhavati/\linelabel{_308e}
+%-----------------------------
+%tadanaṃtaraṃ  pavanarūṣī puruṣī bhavati/  samagrāṃ pṛthvīṃ dṛṣṭyā paśyati/   aṇimādyaṣṭasiddhir bhavati/ \E
+%tadanaṃtaraṃ  pavanarūpī puruṣo bhavati   samagrāṃ pṛthvīṃ dṛṣṭyā paśyati    aṇimādyaṣṭasiddhir bhavati  \P
+%tadanaṃtara   pavanarūpi puruṣo bhavati// samagrāṃ pṛthvī  dṛṣṭā paśyati/    aṇimādyāṣṭasiddhir bhavati/ \B scribe switches so much between i and ī
+%tadanaṃtaraṃ  pavanarūpi puruṣo bhavati// samagrāṃ pṛthvīṃ dṛṣṭā paśyati//   aṇimādyāṣṭasiddhir bhavati// \L
+%\om                                                                 \N1
+%tadanaṃtaraṃ  pavanayopī puruṣo bhavati   samagrāṃ pṛthvīṃ dṛṣṭyā paśyati/   aṇimādyaṣṭasiddhir bhavati//  \D
+%\om                                                                 \N2
+%tadanaṃtaraṃ  pavanayogī puruṣo bhavati   samagrāṃ pṛthvīṃ dṛṣṭvā paśyati    aṇimādyāṣṭasiddhir bhavati  \U1 %%%291.jpg
+%tadanaṃtaraṃ  pavanarūpī puruṣo bhavati// samagrāṃ pṛthvīṃ dṛṣṭvā paśyati//  aṇimāmahimāgarimāladhimā tathā prātikāmyamīśatvaṃ// viśītvaṃ// ity āṣṭasiddhayaḥ////  \U2
+%-----------------------------
+%Subsequently, the person becomes like the wind. He sees the entire earth with a glance. The eight supernatural powers arise.  
+%-----------------------------
+\note[type=source, labelb=_309, labele=_309e, nosep]{cf. YS (PT, p. 844): tato 'sau vāyuyogī syād dṛṣṭvā pṛthvīkulānvitaḥ | aṇimādyaṣṭasiddhiḥ syān mahāpadmodayas tathā | āgacchanti samīpe ca nidhayo nātra saṃśayaḥ |}
+tadanantaraṃ
+pavana\app{\lem[wit={U1}, alt={°yogī}]{yogī}\linelabel{_309}
+      \rdg[wit={P,U2}]{°rūpī}
+      \rdg[wit={B,L}]{°rūpi}
+      \rdg[wit={D}]{°yopī}
+      \rdg[wit={E}]{°rūṣī}}
+    \app{\lem[wit={ceteri}]{puruṣo}
+      \rdg[wit={E}]{puruṣī}} bhavati/
+    samagrāṃ
+    \app{\lem[wit={ceteri}]{pṛthvīṃ}
+      \rdg[wit={B}]{pṛthvī}}
+    \app{\lem[wit={D,E,P}]{dṛṣṭyā}
+      \rdg[wit={B,L}]{dṛṣṭā}
+      \rdg[wit={U1,U2}]{dṛṣṭvā}} paśyati/
+    \app{\lem[wit={ceteri},alt={aṇimādyaṣṭasiddhir}]{aṇimādyaṣṭasiddhi\skp{r-bha}}
+      \rdg[wit={U2}]{aṇimāmahimāgarimāladhimā tathā}
+    }\app{\lem[wit={ceteri},alt={bhavati}]{\skm{r-bha}vati}
+      \rdg[wit={U2}]{ prātikāmyamīśatvaṃ || viśītvaṃ || ity āṣṭasiddhayaḥ ||}}/ \linelabel{_309e}
+  \end{prose}
   \end{edition}
   \begin{translation}
     \ekddiv{
-      head={[\uproman{37}. \textbf{Seven oceans within the body}]},
-      type=section,
-      depth=2, 
-      n=XXXVII.1
-    }
-    \xmlhead[h37]{[XXXVII. Seven oeans within the body]}
-    \begin{tlate}[p37_01]
-     \noindent
-Now, the seven oceans within the body are taught.\footnote{Rāmacandra, who bases his descriptions of the seven oceans on the YSv (PT, pp. 842-43) (cf. sources on the previous page) changed the order of oceans sightly. The respective passage can be translated as follows: ``The seven oceans are taught to be situated within the body, [one of each] containing salt (\textit{lavaṇa}), sugar (\textit{ikṣu}), wine (\textit{surā}), butter (\textit{sarpir}), sour milk (\textit{dadhi}), milk (\textit{dugdha}) and water (\textit{jala}). (1) Salt is within the sweat, (2) sugar in the blood, (3) wine in the skin, (4) ghee in the fat, (5-6) sour milk and milk in the forehead. (7) The nectar of immortality is known to be situated within the semen. A big turtle* (*the earth imagined as a tortoise floating on water) is situated at their feet.''} (1) Within the sweat is the salt ocean. (2) Within the forehead is the milk ocean. (3) Within the marrow is the honey ocean. (4) In the phlegm is the sour milk ocean. (5) In the fat is the ghee ocean. (6) Within the blood is the sugarcane ocean. (7) Within the semen is the ocean of the nectar of immortality. Situated at the feet is the place of the turtle.\footnote{The earth consisting of seven islands with mount meru in its centre represented as a tortoise floating on waters of the seven oceans, cf. \citetitle{markandeya} 58, \citetitle{bhagavata} 5.16-26 and \citeauthor[2009: 354]{bryant2009}.}
-\flushpage
-\end{tlate}
-  \end{translation}
-\end{alignment}
-\pagebreak %after pp. 115-116
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
- \begin{alignment}[
-  texts=edition[class="edition"];
-  translation[class="translation"],
-  ]
-  \begin{edition}
-\ekddiv{
-  head={[\uproman{38}. \textbf{navadvāramadhye navakhaṇḍāni}]},
+  head={[\uproman{42}. \textbf{Signs in the body as a result of Rājayoga}]},
   type=section,
   depth=2, 
-  n=XXXVIII
+  n=XLII.1 
 }
-\xmlhead[h38]{[XXXVIII. navadvāramadhye navakhaṇḍāni]}
-\phantomsection
-\addcontentsline{toc}{section}{XXXVIII. navadvāramadhye navakhaṇḍāni}
-\phantomsection\label{ninecontinents}
-    \begin{prose}[p38_01]
-      \noindent
-%----------------------------      
-%idānīṃ navadvāreṣu                                                                                 nāsikayoḥ kinnarakhaṃḍanaraharikhaṃḍauḥ netrayoḥ ketumāla bhadrāśvau/ karṇayoḥ hiraṇmayakhaṃḍa ramyakakhaṃḍau/ gude kurukhaṃḍaḥ   liṃge ilāvṛtakhaṇḍaḥ// \E  [p.51]
-%idānīṃ navadvāreṣu     navakhaṃjani? kathyaṃte                              mukhe bharatakhaṃḍaḥ 1 nāsikayoḥ kinarakhaṃḍe 3                netrayoḥ ketumāla bhadrāśve 4 karṇayor hiraṇmayaramyaka khaṃdaḥ 5      gude kurukhaṃḍaḥ 6 liṃge ilāvṛtaḥ 7  \P 7659.jpg!!!
-%idānīṃ                 navakhaṃḍāni  kathyaṃte/                             mukhe bharatakhaṃḍaḥ   nāsikayor madhye kināraharikhaṃḍā/      netrayo ketumāla bhadrāsve/   karṇayor hiraṇyamayaramyakhaṃḍaḥ/        gude kurukhaṃḍāḥ/  liṃge iḍṛttaṃ??/ \B DSCN7169.JPG Z.4
-%idānīṃ                 navakhaṃḍāni  kathyaṃte//                            mukhe bharatakhaṃḍaḥ// nāsikayor madhye kinārasiṃhakhaṃḍā      netrayo ketumāla bhadrāsve//   karṇayor hiraṇyamayaramyakhaṃḍaḥ        gude kurukhaṃḍāḥ//  liṃge ilāvṛtaṃ// \L   0025.jpg
-%\om                                                                 \N1
-%idānīṃ navadvāramadhye navakhaṃḍāḥ   kathyaṃte//                                  bharatakhaṃḍaḥ/ kāśmīrakhaṃḍaḥ/ strīmaṃḍalakhaṃḍaḥ/     dvijakhaṃḍaḥ/ ekapādakhaṃḍaḥ/  rākṣasakhaṃḍaḥ  gāṃdhārakhaṃḍaḥ// kaivarttakhaṃḍaḥ// garbhakhaṃḍaḥ// \D %%%p.14 verso
-%idānīṃ navadvāramadhye navakhaṃḍāḥ   kathyaṃte//                                  bharatakhaṃḍaḥ/ kāśmīrakhaṃḍaḥ/ strīmaṃḍalakhaṃḍaḥ/     dvijakhaṃḍaḥ// ekapādakhaṃḍaḥ//  rākṣasakhaṃḍaḥ  ghāṃdhārakhaṃḍaḥ// kaivarttakhaṃḍaḥ// garbhakhaṃḍaḥ// \K1
-%idānīṃ navadvāramadhye navakhaṃḍāḥ   kathyaṃte//                                  bharatakhaṃḍaḥ// kāśmīrakhaṃḍaḥ// strīmaṃḍalakhaṃḍaḥ//     dvijakhaṃḍaḥ// ekapādakhaṃḍaḥ//  rākṣasakhaṃḍaḥ//  gāṃdhārakhaṃḍaḥ// kaivarttakhaṃḍaḥ// garbhakhaṃḍaḥ//cha// \J      
-%\om                                                                 \N2
-%idānīṃ navadvāramadhye navakhaṃḍāḥ   kathyate                                     bharatakhaṃḍaḥ  kāsmīrakhaṃḍaḥ strīmaṃḍalakhaṃḍaḥ   ???dvīttakhaṃḍaḥ yekapādakhaṃḍaḥ rākṣasakhaṃḍaḥ gaṃdhārakhaṃḍaḥ  kaivartakhaṃḍaḥ   garbhakaṃḍhaḥ \U1
-%idānīṃ navadvāreṣu     navakhaṃḍāṇi  kathyaṃte// pādamadhye kūrmasthānaṃ// mukhaṃ bhāratakhaṃḍaṃ// nāsikayoḥ// kinnara// harikhaṃḍa//       netrayoḥ// ketumāla// bhadraśve karṇayoḥ// hiraṇmaya// ramyakakaṃḍe// gude kurukhaṃḍaṃ// liṃge ulāvṛtaṃ// evaṃ navakhaṃḍāḥ//    \U2
-%-----------------------------
-%Now, the nine continents within the nine doors are taught: Bharata (1), Kaśmīra (2), Strīmaṃḍala (3), Dvija (4), Ekapāda (5), Rākṣasa (6), Ghandhāra (7), Kaivartta (8) [and] Garbha (9). 
-%----------------------------
-\note[type=source, labelb=_107b, labele=_107e, nosep]{cf. YSv (PT, p. 843): idānīn tu navadvāre navakhaṇḍāni saṃśṛṇu | pāyvādau bhārataṃ khaṇḍaṃ kāśmīraṃ trikamaṇḍalam | dvijakhaṇḍam ekapādaṃ khaṇḍaṃ vakṣye samaṇḍalam | kaivarttaṃ garttagāndhāraṃ navakhaṇḍam iti sthitam |}
-\note[type=source, labelb=_107b, labele=_107e, nosep]{cf. SSP 3.9 (Ed. p. 55): navakhaṇḍāḥ nava dvāreṣu vasanti| bhāratakhaṇḍaḥ kāśmīrakhaṇḍaḥ karparakhaṇḍaḥ śrīkhaṇḍaḥ śaṅkhakhaṇḍaḥ ekapādakhaṇḍaḥ gāndhārakhaṇḍaḥ kaivartakhaṇḍaḥ mahāmerukhaṇḍaḥ evaṃ navakhaṇḍāḥ |}
-%\note[type=philcomm, labelb=280, lem={\uproman{38}\textsuperscript{\lowroman{1}-\lowroman{2}}}]{There is complete divergence between the two main groups of manuscripts. I edited according to the \beta-group, since their readings are very close to the source texts.}% These are the well-known nine \textit{dvīpa}s or islands ruled by nine sons of Ṛṣabhadeva, which are the nine \textit{varṣa}s of Jambudvīpa, viz., Bhārata, Kinnara, Hari, Kuru, Hiraṇmaya, Ramyaka, Ilāvṛta, Bhadrāśva and Ketumāla.}
-idānīṃ\linelabel{_107b}
-\app{\lem[wit={D,E,J,K1,U1}]{navadvāramadhye}
-  \rdg[wit={E,P,U2}]{navadvāreṣu}
-  \rdg[wit={B,L}]{\om}}\hfill
-\app{\lem[wit={B,P,L,U2}]{navakhaṇḍāni}
-  \rdg[wit={D,J,K1,U1}]{navakhaṃḍāḥ}
-  \rdg[wit={E}]{\om}}\hfill
-\app{\lem[wit={ceteri}]{kathyante}
-  \rdg[wit={U1}]{kathyate}}/\hfill
-\app{\lem[wit={D,J,K1,U1}]{bharatakhaṇḍaḥ}
-  \rdg[wit={B,P,L}]{mukhe bharatakhaṃḍaḥ}
-  \rdg[wit={U2}]{pādamadhye kūrmasthānaṃ || mukhaṃ bhāratakhaṃḍaṃ}
-  \rdg[wit={E}]{\om}}\dd{}\hfill
-\app{\lem[wit={D,J,K1,U1}]{kāśmīrakhaṃḍaḥ}
-  \rdg[wit={E}]{nāsikayoḥ kinnarakhaṃḍanaraharikhaṃḍauḥ}
-  \rdg[wit={P}]{nāsikayoḥ kinarakhaṃḍe 3}
-  \rdg[wit={B}]{nāsikayor madhye kināraharikhaṃḍā}
-  \rdg[wit={L}]{nāsikayor madhye kinārasiṃhakhaṃḍā}
-  \rdg[wit={U2}]{nāsikayoḥ || kinnara || harikhaṃḍa}}\dd{}\hfill
-\app{\lem[wit={D,J,K1,U1}, alt={strīmaṇḍalakhaṇḍaḥ}]{strī:\\maṇḍalakhaṇḍaḥ}
-  \rdg[wit={ceteri}]{\om}}\dd{}\hfill
-\app{\lem[wit={D,J,K1,U1}]{dvijakhaṇḍaḥ}
-  \rdg[wit={E}]{netrayoḥ ketumāla bhadrāśvau}
-  \rdg[wit={P}]{netrayoḥ ketumāla bhadrāśve 4}
-  \rdg[wit={B,L}]{netrayo ketumāla bhadrāsve}
-  \rdg[wit={U2}]{netrayoḥ || ketumāla || bhadraśve}}\dd{}\hfill
-\app{\lem[wit={D,J,K1}]{ekapādakhaṇḍaḥ}
-  \rdg[wit={U1}]{yekapādakhaṃḍaḥ}
-  \rdg[wit={ceteri}]{\om}}\dd{}\hfill
-\app{\lem[wit={D,J,K1,U1}]{rākṣasakhaṇḍaḥ}
-  \rdg[wit={E}]{karṇayoḥ hiraṇmayakhaṃḍa ramyakakhaṃḍau}
-  \rdg[wit={P}]{karṇayor hiraṇmayaramyakakhaṃdaḥ 5}
-  \rdg[wit={B,L}]{karṇayor hiraṇyamayaramyakhaṃḍaḥ}
-  \rdg[wit={U2}]{karṇayoḥ || hiraṇmaya || ramyakakaṃḍe}}\dd{}\hfill
-\app{\lem[wit={D,J,K1}]{gāndhārakhaṇḍaḥ}
-  \rdg[wit={U1}]{gaṃdhārakhaṇḍaḥ}
-  \rdg[wit={E}]{gude kurukhaṃḍaḥ}
-  \rdg[wit={P}]{gude kurukhaṃḍaḥ 6}
-  \rdg[wit={B,L}]{gude kurukhaṃḍāḥ}
-  \rdg[wit={U2}]{gudekurukhaṃḍaṃ}}\dd{}\\
-\app{\lem[wit={D,J,K1,U1}, alt={kaivarttakhaṇḍaḥ}]{kaivarttakhaṇḍaḥ}
-  \rdg[wit={E}]{liṃge ilāvṛtakhaṇḍaḥ}
-  \rdg[wit={P}]{liṃge ilāvṛtaḥ 7}
-  \rdg[wit={B,L}]{ilāvṛtaṃ}
-  \rdg[wit={U2}]{liṃge ulāvṛtaṃ}}\dd{}
-\app{\lem[wit={D,K1,U1}]{garbhakhaṇḍaḥ}
-  \rdg[wit={J}]{garbhakhaṇḍaḥ || cha ||}
-  \rdg[wit={U2}]{evaṃ navakhaṃḍāḥ}
-  \rdg[wit={ceteri}]{\om}}\dd{}\linelabel{_107e}%\vspace*{\fill}
-\end{prose}
-  \end{edition}
-  \begin{translation}
-\ekddiv{
-  head={[\uproman{38}. \textbf{Nine regions within the nine Doors}]},
-  type=section,
-  depth=2, 
-  n=XXXVIII.1
-}
-\xmlhead[h38]{[XXXVIII. Nine regions within the nine Doors]}
-\begin{tlate}[p38_01] \noindent
-  Now, the nine continents\footnote{The island of Jambudvīpa consists of nine continents.} within the nine orifices\footnote{The nine doors (\textit{navadvāra}) refer to the nine openings of the body: mouth, nostrils, eyes, ears, anus and gender.} are taught: Bharata (1), Kāśmīra (2), Strīmaṇḍala (3), Dvija (4), Ekapāda (5), Rākṣasa (6), Gāndhāra (7), Kaivartta (8) [and] Garbha (9).\footnote{There is a complete divergence between the two main groups of manuscripts. I have edited according to the \beta-group, since its readings are much closer to the source texts. A thoughtful scribe of the \gamma-group must have been dissatisfied with the original nomenclature and the supposedly original absence of the names of the nine doors in his exemplar, and therefore felt compelled to rewrite the passage. Consequently, the \gamma-group transmits this section with an alternative nomenclature for the nine regions and includes the complete set of the names of the nine doors. These names are partially preserved in the \citetitle{ramatosana} and entirely absent from the \citetitle{ssplonavla}. The \gamma-group locates (1) the Bharatakhaṇḍa within the mouth, (2–3) the Kinnara- and Harikhaṇḍa in the two nostrils, (4–5) the Ketumāla- and Bhadrāśva[-khaṇḍa] in the eyes, (6–7) the Hiraṇyamaya- and Ramyaka[-khaṇḍa] in the ears, (8) the Kurukhaṇḍa at the anus, and (9) the Ilāvṛta[-khaṇḍa] at the genitals. This system, along with a detailed and elaborate description, is presented in \citetitle{parakhya} 5.61–93.}
-  \flushpage
-  \end{tlate}
+\xmlhead[h42]{[XLII. Signs in the body as a result of Rājayoga]}
+%\vspace{-3mm}
+\begin{tlate}[p42_01]
+\noindent Now, signs like this manifest in the body as a result of Rājayoga.\footnote{The repeated mention of the effects of Rājayoga seems redundant since the topic has been covered extensively already in section \uproman{16}-\uproman{17}. Nevertheless, these specific results have not been mentioned so far. In the descriptions of previous chapters, the unhinderedness, equanimity and bliss resulting from Rājayoga were emphasized. Here, the focus shifts to physical results such as health, strength, supernatural abilities or resilience.} They are described. The eradication of all diseases occurs. He sees the entire world. Subsequently, knowledge whose range is the principles arises. He understands all languages. Then, the person's body becomes as hard as a diamond. After a snake bite has taken place, death does not occur. Then, the troubles of hunger, thirst, sleep, heat and cold do not oppress for the person. Perfection of speech arises. When struck by lightning, there is no damage whatsoever to the body. Subsequently, the person becomes a yogin of the wind.\footnote{Rāmacandra employs \textit{pavanayogī} as a synonym for \textit{vāyuyogī} of his source text \emph{Yogasvarodaya}. The following sentences suggest that the \textit{pavanayogī} is so-called because the yogin can move freely through space, like the wind. That reminds us of \emph{Amanaska} 1.65: \textit{dvādaśāhalayenāpi bhūcaratvaṃ hi sidhyati} | \textit{nimiṣārdhapramāṇena paryaṭaty eva bhūtalam} || 65 || Birch (213: 243) translates: ``By means of absorption for a period of twelve days, the state of moving across the earth is achieved. Within half the time [it takes to] blink an eyelid, [the yogin can] travel [anywhere] around the world.'' An e-text search for \textit{pavanayogī} yielded no hits, in contrast to \textit{vāyuyogī}. However, the term seems to be mostly associated with \textit{prāṇāyāma} in other texts, as in the case of \emph{Rudrayāmalatantra} 61.177: \textit{pavaneśaś cānilasthā paramātmā nirantaraḥ} (em.] \textit{nināntarā}) \textit{vāyupūrakakārī ca vāyukumbhakavadhinī} || 175 || \textit{vāyucchidrakaro vātā vāyunirgamamudrikā} | \textit{kumbhakastho recakasthā pūrakasthātipūriṇī} || 176 || \textit{vāyvākāśādhārarūpī vāyusañcārakāriṇī} | \textit{vāyusiddhikaro dātrī vāyuyogī ca vāyugā} || 177 || `` (175) The lord of the breath, residing in breath is the supreme self, not interrupted anywhere. She is one who performs the inhalation of the breath and the one who executes the retention of the breath. (176) He is one who pierces with the breath, he is the blower; she is the one who seals the outflow of the breath. He abides in retention, she abides in exhalation, in inhalation, and in intensified inhalation. (177) She is the one who has the form of a support of space and breath, the one who sets the breath in motion. He is the one who accomplishes the breath, the giver and the yogin of the wind; and she the one who moves the wind.''} He sees the entire earth with [his] gaze. The eight supernatural powers beginning with ``becoming infinitely small'' etc. (\textit{aṇimādi}) arise.
+    \end{tlate}
   \end{translation}
 \end{alignment}
-\pagebreak %after pp. 117-118
+\pagebreak %after pp. 131-132
 \cleardoublepage
 \selectlanguage{english}
 \chapter{Appendix}
