--- a/intro.bib
+++ b/intro.bib
@@ -2956,7 +2956,7 @@ keywords={primary},
 @misc{amanaskaed,
    title={Amanaska},
    subtitle={Amanaska: King of All Yogas. A Critical Edition and Annotated Translation with a Monographic Introduction}, 
-   howpublished={See Ph.D. Dissertation by Jason Birch (2013), pp. 215--182},
+   howpublished={See Ph.D. Dissertation by Jason Birch (2013)},
    keywords={primary},
 }%!
 
